<resources>
    <string name="app_name">MilanoPartner</string>

    <string name="login_title">Milano</string>
    <string name="login_version">Partner</string>
    <string name="login_login_text">entrar</string>
    <string name="login_client_app">app para clientes</string>

    <string name="main_connect">conectarse</string>

    <string name="finances_per_week_title">Week</string>
    <string name="finances_per_month_title">Month</string>
    <string name="finances_per_year_title">Year</string>
    <string name="finances_per_all_title">All</string>
    <string name="finances_stimated_payment">Estimated payment</string>
    <string name="finances_test_payment">10,000</string>
    <string name="finances_currency_simbol">$</string>

    <string name="rate_start_rate">5.0</string>
    <string name="rate_actual_rate">Your Current rating</string>
    <string name="rate_total_services">Total services</string>
    <string name="rate_percent_acepted">Porcentage accepted</string>
    <string name="rate_five_start_services">5 star service</string>

    <string name="default_zero">0</string>
    <string name="title_activity_login">Sign in</string>

    <!--Net Messages -->
    <string name="no_internet_message">Check your Internet connection</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Pasword</string>
    <string name="prompt_user_name">User</string>
    <string name="action_sign_in">To enter</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <!-- String related to week-->
    <string name="lunes">Monday</string>
    <string name="martes">Tuesday</string>
    <string name="miercoles">Wendnesday</string>
    <string name="jueves">Thursday</string>
    <string name="viernes">Friday</string>
    <string name="sabado">Saturday</string>
    <string name="domingo">Sunday</string>

    <string name="enero">January</string>
    <string name="febrero">February</string>
    <string name="marzo">March</string>
    <string name="abril">April</string>
    <string name="mayo">May</string>
    <string name="junio">June</string>
    <string name="julio">July</string>
    <string name="agosto">August</string>
    <string name="septiembre">September</string>
    <string name="octubre">October</string>
    <string name="noviembre">November</string>
    <string name="diciembre">December</string>

    <string name="editar">Edit</string>
    <string name="aceptar">Accept</string>
    <string name="seleccionar">Select</string>
    <string name="salir">Get out</string>

    <string name="share_text">Invite friends</string>
    <string name="share_title">Share us on"</string>


    <string name="ayuda">Help</string>
    <string name="documentos">Documents</string>
    <string name="pagos">Payments</string>
    <string name="configuracion">Configuration</string>
    <string name="acercade">About</string>

    <string name="you_bought">You bought:</string>
    <string name="recinto_palacio">Palacio de los deportes</string>
    <string name="date">Date:</string>
    <string name="myName">My name</string>
    <string name="profile">My profile</string>
    <string name="january">JANUARY</string>


</resources>
