<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100">



        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/swipeLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="30"
            android:background="#323232"
            >
            <RelativeLayout
                android:id="@+id/rate_panel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#323232">
                <LinearLayout
                    android:id="@+id/star_wrapper"
                    android:layout_width="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_above="@+id/your_rate"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:id="@+id/star_rate_icon"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:src="@drawable/ic_stars_white_48dp"
                        android:layout_toLeftOf="@+id/rate_text"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center_vertical"


                        />
                    <TextView
                        android:id="@+id/rate_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rate_start_rate"
                        android:textAllCaps="true"
                        android:textSize="36sp"
                        android:textColor="#EEE"
                        android:padding="0dp"
                        android:layout_centerInParent="true"

                        />

                </LinearLayout>

        <TextView
            android:id="@+id/your_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rate_actual_rate"
            android:textAllCaps="true"
            android:textSize="18sp"
            android:textColor="#EEE"
            android:layout_centerInParent="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            />
            </RelativeLayout>
        </android.support.v4.widget.SwipeRefreshLayout>


    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="#323232">

    </View>
    <LinearLayout
        android:visibility="gone"
        android:id="@+id/stats_panel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#323232"
            android:weightSum="122">
            <RelativeLayout
                android:id="@+id/total_services"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="40">
                <TextView
                    android:id="@+id/services_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_zero"
                    android:textAllCaps="true"
                    android:textColor="#EEE"
                    android:layout_centerInParent="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="15dp"
                    android:layout_above="@+id/services_text"
                    android:textSize="30sp"/>
                <TextView
                    android:id="@+id/services_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rate_total_services"
                    android:textAllCaps="true"
                    android:textColor="#EEE"
                    android:layout_centerInParent="true"
                    android:layout_alignParentBottom="true"
                    android:gravity="center"
                    android:textSize="14sp"/>

            </RelativeLayout>
            <View
                android:id="@+id/separator3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#2e0557">

            </View>
            <RelativeLayout
                android:id="@+id/rated_services"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="40">
                <TextView
                    android:id="@+id/accepted_services"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_zero"
                    android:textAllCaps="true"
                    android:textColor="#EEE"
                    android:layout_centerInParent="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="15dp"
                    android:layout_above="@+id/accepted_services_text"
                    android:textSize="30sp"/>
                <TextView
                    android:id="@+id/accepted_services_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rate_percent_acepted"
                    android:textAllCaps="true"
                    android:textColor="#EEE"
                    android:layout_alignParentBottom="true"
                    android:gravity="center"
                    android:layout_centerInParent="true"
                    android:textSize="14sp"/>


            </RelativeLayout>
            <View
                android:id="@+id/separator4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#2e0557">

            </View>
            <RelativeLayout
                android:id="@+id/five_starts_services"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="40">
                <TextView
                    android:id="@+id/number_five_services"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_zero"
                    android:textAllCaps="true"
                    android:textColor="#EEE"
                    android:layout_centerInParent="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="15dp"
                    android:layout_above="@+id/number_five_services_text"
                    android:textSize="30sp"
                    />
                <TextView
                    android:id="@+id/number_five_services_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rate_five_start_services"
                    android:textAllCaps="true"
                    android:textColor="#EEE"
                    android:layout_centerInParent="true"
                    android:layout_alignParentBottom="true"
                    android:gravity="center"
                    android:textSize="14sp"/>
                </RelativeLayout>


        </LinearLayout>


        </LinearLayout>



    <View
        android:id="@+id/separator_bottom"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#2e0557">

    </View>
    <LinearLayout
        android:id="@+id/comments_panel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="37"
        android:orientation="horizontal"
        android:background="#FFF">
        <ListView
            android:id="@+id/optionListRate"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </ListView>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/best_panel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="horizontal"
        android:background="#FFF">

    </LinearLayout>


</LinearLayout>