<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="100"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/upper_panel"
            android:layout_width="match_parent"
            android:layout_weight="40"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:weightSum="201"
            android:background="#151515">
            <RelativeLayout
                android:id="@+id/profile_panel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="100"
                android:background="#151515">
                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/profile_image"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:src="@drawable/ic_person_black_48dp"
                    app:civ_border_width="2dp"
                    app:civ_fill_color="@android:color/background_light"
                    android:layout_centerInParent="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="20dp"
                    app:civ_border_color="#151515"/>
                <TextView
                    android:id="@+id/display_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="myName"
                    android:layout_marginTop="10dp"
                    android:layout_centerInParent="true"
                    android:textColor="#FFF"
                    android:textAllCaps="true"
                    android:textSize="14sp"
                    android:layout_below="@+id/profile_image"/>
                <TextView
                    android:id="@+id/edit_option"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/editar"
                    android:textAllCaps="true"
                    android:layout_marginTop="5dp"
                    android:layout_centerInParent="true"
                    style="@style/LinkStyle"
                    android:textSize="14sp"
                    android:layout_below="@+id/display_name"/>

            </RelativeLayout>
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#FFF"
                android:padding="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp">

            </View>
            <RelativeLayout
                android:id="@+id/entrance_panel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="100"
                android:background="#151515">
                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/house_image"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:src="@drawable/ic_store_black_48dp"
                    app:civ_border_width="2dp"
                    app:civ_fill_color="@android:color/background_light"
                    android:layout_centerInParent="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="20dp"
                    app:civ_border_color="#151515"/>
                <TextView
                    android:id="@+id/home_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="myName"
                    android:layout_marginTop="10dp"
                    android:layout_centerInParent="true"
                    android:textColor="#FFF"
                    android:textAllCaps="true"
                    android:textSize="14sp"
                    android:layout_below="@+id/house_image"/>
                <TextView
                    android:id="@+id/edit_home_option"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seleccionar"
                    android:textAllCaps="true"
                    android:layout_marginTop="5dp"
                    android:layout_centerInParent="true"
                    style="@style/LinkStyle"
                    android:textSize="14sp"
                    android:layout_below="@+id/home_text"/>

            </RelativeLayout>


        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:background="#151515">

        </View>
        <LinearLayout
            android:id="@+id/bottom_panel"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="56"
            android:orientation="vertical"
            android:background="#FFF">

            <ListView
                android:id="@+id/list_option_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </ListView>
            <Button
                android:id="@+id/exit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/salir"/>

        </LinearLayout>



    </LinearLayout>

</RelativeLayout>